# combined_connectivity

./: .gitignore  README.md
connectivity_shared/: README.md  pyproject.toml
connectivity_shared/src/connectivity_shared/: __init__.py  atlas_labels.py  brain_extraction.py  dicom_to_bids.py  freesurfer_detector.py  graph_metrics.py  html_report.py  matrix_io.py  qc_visualization.py
docs/: architecture.md  connectivity_methods.md  index.md  session_2026-01-30_initial_exploration.md  usage_guide.md  version_control_guide.md
docs/uml/: architecture.puml  class_dwi_pipeline.puml  class_fmri_pipeline.puml  class_shared.puml  data_flow.puml  sequence_fmri.puml  state_pipeline.puml  use_case.puml
validation/: generate_test_data.py  run_all_validations.sh  test_atlas_consistency.py  test_atlas_labels.py  test_brain_extraction.py  test_dicom_to_bids.py  test_graph_metrics.py  test_html_report.py  test_matrix_io.py  test_qc_visualization.py
