[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connectivity-shared"
version = "0.1.0"
description = "Shared utilities for DTI and resting-state fMRI connectivity analysis pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Richard Barcus"}
]
keywords = ["neuroimaging", "connectivity", "fMRI", "DTI", "graph-theory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "nibabel>=3.0.0",
    "networkx>=2.6.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "nilearn>=0.9.0",
    "seaborn>=0.11.0",
    "pyyaml>=5.4.0",
    "packaging",
    "mrtrix3-demon-addon @ git+https://github.com/MrRichard/mrtrix3_demon_addon.git",
    "nilearn-rsb-analysis-pipeline @ git+https://github.com/MrRichard/nilearn_RSB_analysis_pipeline.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
all = [
    "connectivity-shared[dev]",
]

[project.urls]
Repository = "https://github.com/your-org/connectivity-shared"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
